--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-bg relative min-h-screen flex items-center justify-center overflow-hidden"
-        style="background: linear-gradient(135deg, rgba(12, 12, 12, 0.9), rgba(26, 26, 46, 0.9)), url('images/Jones.jpg'); background-size: cover; background-position: left center; background-repeat: no-repeat;">
+        style="background: linear-gradient(135deg, rgba(12, 12, 12, 0.9), rgba(26, 26, 46, 0.9)), url('/Jones.jpg'); background-size: cover; background-position: left center; background-repeat: no-repeat;">
 
         
         <!-- Animated Particles -->
@@ -771,7 +771,7 @@
                     <div class=" relative group bg-black/5 backdrop-blur-xl border border-blue-300 rounded-3xl p-8 transition-transform hover:-translate-y-2 hover:shadow-xl duration-300 hover:bg-white/5" style="animation-delay: 0.4s;" >
                         <div class="overflow-hidden rounded-2xl relative">
                             <img 
-                                src="images/Salon D.jpg.png"
+                                src="/Salon D.jpg.png"
                                 alt="Salon D - Social Media Design"
                                 class="w-full h-85 object-cover transition-all duration-700 group-hover:scale-110"
                             >
@@ -796,7 +796,7 @@
                     <div class="relative group bg-white/5 border rounded-3xl shadow-l p-8  border-blue-300 hover:-translate-y-2 hover:shadow-xl duration-300 hover:bg-white/5" >
                         <div class="overflow-hidden rounded-2xl relative">
                             <img 
-                                src="images/Day2-Resized.png"
+                                src="/Day2-Resized.png"
                                 alt="4Ways Poster Design"
                                 class="w-full h-85 object-cover transition-all duration-700 group-hover:scale-110"
                             >
@@ -820,7 +820,7 @@
                     <div class="relative group border bg-black/5 border border-blue-300 rounded-3xl shadow-l p-8 transition-transform hover:-translate-y-2 hover:shadow-xl duration-300 hover:bg-white/5">
                         <div class="overflow-hidden rounded-2xl relative">
                             <img 
-                                src="images/agency-F.png"
+                                src="/agency-F.png"
                                 alt="Brand Launch Creative"
                                 class="w-full h-85 object-cover transition-all duration-700 group-hover:scale-110"
                             >
