--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-bg relative min-h-screen flex items-center justify-center overflow-hidden"
-        style="background: linear-gradient(135deg, rgba(12, 12, 12, 0.9), rgba(26, 26, 46, 0.9)), url('/Jones.jpg'); background-size: cover; background-position: left center; background-repeat: no-repeat;">
+        style="background: linear-gradient(135deg, rgba(12, 12, 12, 0.9), rgba(26, 26, 46, 0.9)), url('Jones.jpg'); background-size: cover; background-position: left center; background-repeat: no-repeat;">
 
         
         <!-- Animated Particles -->
