--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
 
             <section class="relative py-30 bg-cover p-10  bg-center mx-1 my-10 rounded text-center">
-                <div class="relative bg-cover bg-center rounded-2xl overflow-hidden p-0" style="background-image: url('images/🚀\ Web\ Development\ Starter\ Pack\ –\ Essential\ Resources\ &\ Templates\ for\ Beginners.png');">
+                <div class="relative bg-cover bg-center rounded-2xl overflow-hidden p-0" style="background-image: url('/🚀\ Web\ Development\ Starter\ Pack\ –\ Essential\ Resources\ &\ Templates\ for\ Beginners.png');">
         <!-- Dark Overlay -->
         <div class="absolute inset-0 bg-black bg-opacity-9 0 backdrop-blur-sm"></div>
 
@@ -820,7 +820,7 @@
                     <div class="relative group border bg-black/5 border border-blue-300 rounded-3xl shadow-l p-8 transition-transform hover:-translate-y-2 hover:shadow-xl duration-300 hover:bg-white/5">
                         <div class="overflow-hidden rounded-2xl relative">
                             <img 
-                                src="/agency-F.png"
+                                src="/Social Ads.jpg"
                                 alt="Brand Launch Creative"
                                 class="w-full h-85 object-cover transition-all duration-700 group-hover:scale-110"
                             >
