--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                     <div class="relative group border bg-black/5 border border-blue-300 rounded-3xl shadow-l p-8 transition-transform hover:-translate-y-2 hover:shadow-xl duration-300 hover:bg-white/5">
                         <div class="overflow-hidden rounded-2xl relative">
                             <img 
-                                src="/Social Ads.jpg"
+                                src="agency.jpg"
                                 alt="Brand Launch Creative"
                                 class="w-full h-85 object-cover transition-all duration-700 group-hover:scale-110"
                             >
