--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <!-- Action Buttons -->
             <div class="mt-10 flex flex-col md:flex-row items-center gap-6 max-w-lg mx-auto">
             <!-- Download CV -->
-            <a href="My Documents/JONES MWISA CV.docx" download
+            <a href="/JONES MWISA CV.docx" download
                 class="group relative inline-flex items-center justify-center w-[240px] h-[56px] px-6 bg-white text-black font-semibold rounded-xl shadow-lg border
                         hover:bg-black hover:text-white hover:shadow-xl hover:-translate-y-1
                         transition-all duration-300 ease-out focus:outline-none focus:ring-4 focus:ring-blue-300">
